--- a/src/SpaceCat/example_SpaceCat.ipynb
+++ b/src/SpaceCat/example_SpaceCat.ipynb
@@ -122,7 +122,7 @@
    "id": "afe94f8b-c9ff-4129-9fc1-e444c96be2b6",
    "metadata": {},
    "source": [
-    "## Save Output"
+    "## Save Output to CSV (optional)"
    ]
   },
   {
