--- a/src/SpaceCat/example_SpaceCat.ipynb
+++ b/src/SpaceCat/example_SpaceCat.ipynb
@@ -19,8 +19,8 @@
     "import anndata\n",
     "import pandas as pd\n",
     "\n",
-    "from preprocess import preprocess_table\n",
-    "from features import SpaceCat"
+    "from SpaceCat.preprocess import preprocess_table\n",
+    "from SpaceCat.features import SpaceCat"
    ]
   },
   {
