--- a/src/SpaceCat/example_SpaceCat.ipynb
+++ b/src/SpaceCat/example_SpaceCat.ipynb
@@ -35,11 +35,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "43060651-3045-4a85-8ee5-c74f490a6235",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "output_dir = ''\n",
-    "cell_table = pd.read_csv('')"
+    "cell_table = pd.read_csv('')\n",
+    "metadata = pd.read_csv('')"
    ]
   },
   {
@@ -62,10 +65,12 @@
     "centroid_cols = ['centroid-0', 'centroid-1']\n",
     "\n",
     "adata = anndata.AnnData(cell_table.loc[:, markers])\n",
-    "adata.obs = pd.merge(cell_table.loc[:, cell_data_cols, ], on = ['fov'])\n",
+    "adata.obs = pd.merge(cell_table.loc[:, cell_data_cols, ], metadata, on = ['fov'])\n",
+    "adata.obs_names = [str(i) for i in adata.obs_names]\n",
     "adata.obsm['spatial'] = cell_table.loc[:, centroid_cols].values\n",
     "\n",
-    "adata.write_h5ad(os.path.join(output_dir, 'adata', 'adata_table.h5ad'))"
+    "os.makedirs(os.path.join(output_dir, 'adata'), exist_ok=True)\n",
+    "adata.write_h5ad(os.path.join(output_dir, 'adata', 'adata.h5ad'))"
    ]
   },
   {
@@ -82,10 +87,10 @@
     "                                ['HLA1', 0.001], ['HLADR', 0.001], ['TBET', 0.0015], ['TCF1', 0.001],\n",
     "                                ['TIM3', 0.001], ['Vim', 0.002], ['Fe', 0.1]]\n",
     "\n",
-    "adata = anndata.read_h5ad(os.path.join(output_dir, 'adata', 'adata_table.h5ad'))\n",
+    "adata = anndata.read_h5ad(os.path.join(output_dir, 'adata', 'adata.h5ad'))\n",
     "adata_processed = preprocess_table(adata, functional_marker_thresholds)\n",
     "\n",
-    "adata_processed.write_h5ad(os.path.join(output_dir, 'adata', 'adata_table_processed.h5ad'))"
+    "adata_processed.write_h5ad(os.path.join(output_dir, 'adata', 'adata_processed.h5ad'))"
    ]
   },
   {
@@ -104,17 +109,17 @@
    "outputs": [],
    "source": [
     "# Initialize class\n",
-    "adata_processed = anndata.read_h5ad(os.path.join(output_dir, 'adata', 'adata_table_processed.h5ad'))\n",
+    "adata_processed = anndata.read_h5ad(os.path.join(output_dir, 'adata', 'adata_processed.h5ad'))\n",
     "\n",
-    "features = SpaceCat(adata_processed, image_column='fov', label_column='label', \n",
-    "                    cluster_columns=['cell_cluster', 'cell_cluster_broad'], \n",
-    "                    compartment_column='compartment')\n",
+    "features = SpaceCat(adata_processed, image_key='fov', seg_label_key='label', \n",
+    "                    cluster_key=['cell_cluster', 'cell_cluster_broad'], \n",
+    "                    compartment_key='compartment')\n",
     "\n",
     "\n",
     "# Generate features and save anndata table\n",
     "adata_processed = features.run_spacecat()\n",
     "\n",
-    "adata_processed.write_h5ad(os.path.join(output_dir, 'adata', 'adata_table_processed.h5ad'))"
+    "adata_processed.write_h5ad(os.path.join(output_dir, 'adata', 'adata_processed.h5ad'))"
    ]
   },
   {
