allow for no compartments, compute image stats only

--- a/src/SpaceCat/example_SpaceCat.ipynb
+++ b/src/SpaceCat/example_SpaceCat.ipynb
@@ -111,9 +111,9 @@
     "# Initialize class\n",
     "adata_processed = anndata.read_h5ad(os.path.join(output_dir, 'adata', 'adata_processed.h5ad'))\n",
     "\n",
-    "features = SpaceCat(adata_processed, image_key='fov', seg_label_key='label', \n",
+    "features = SpaceCat(adata_processed, image_key='fov', seg_label_key='label', cell_area_key='area',\n",
     "                    cluster_key=['cell_cluster', 'cell_cluster_broad'], \n",
-    "                    compartment_key='compartment')\n",
+    "                    compartment_key='compartment', compartment_area_key='compartment_area')\n",
     "\n",
     "\n",
     "# Generate features and save anndata table\n",
