functional marker feature generation

--- a/src/SpaceCat/example_SpaceCat.ipynb
+++ b/src/SpaceCat/example_SpaceCat.ipynb
@@ -117,7 +117,7 @@
     "\n",
     "\n",
     "# Generate features and save anndata table\n",
-    "adata_processed = features.run_spacecat()\n",
+    "adata_processed = features.run_spacecat(functional_feature_level='cell_cluster')\n",
     "\n",
     "adata_processed.write_h5ad(os.path.join(output_dir, 'adata', 'adata_processed.h5ad'))"
    ]
